# mblt-sdk-tutorial

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.KR.md  README.md  SKILLS.md  pyproject.toml
assets/: Compiler.avif  Runtime.avif
compilation/: README.KR.md  README.md
compilation/_guides/: 00_about_compilation_pipeline.KR.md  00_about_compilation_pipeline.md  01_about_quantization_config.KR.md  01_about_quantization_config.md  02_about_calibration_data.KR.md  02_about_calibration_data.md  03_about_multi_component.KR.md  03_about_multi_component.md
compilation/bert/: README.KR.md  README.md  compile_mblt.py  compile_mxq.py  get_embedding.py  prepare_calib.py  requirements.txt
compilation/face_detection/: README.KR.md  README.md  model_compile.py  prepare_model.py  prepare_widerface.py
compilation/image_classification/: README.KR.md  README.md  model_compile.py  model_compile_regulus.py  prepare_imagenet.py  prepare_model.py
compilation/instance_segmentation/: README.KR.md  README.md  model_compile.py
compilation/llm/: README.KR.md  README.md  download_model.py  generate_calib.py  generate_mxq.py  generate_mxq_4bit.py  get_rotation_emb.py  requirements.txt
compilation/object_detection/: README.KR.md  README.md  model_compile.py  model_compile_regulus.py
compilation/pose_estimation/: README.KR.md  README.md  model_compile.py  prepare_coco.py
compilation/stt/: README.KR.md  README.md  compile_decoder.py  compile_encoder.py  generate_calibration.py  prepare_audio.py  requirements.txt
compilation/vlm/: README.KR.md  README.md  download_images.py  generate_language_calibration_data.py  generate_vision_calibration_data.py  get_config.py  get_safetensors.py  mblt_compile_language.py  mblt_compile_vision.py  mxq_compile_language.py  mxq_compile_vision.py  requirements.txt  utils.py
runtime/: README.KR.md  README.md
runtime/_guides/: 00_about_runtime_pipeline.KR.md  00_about_runtime_pipeline.md  01_about_model_preparation.KR.md  01_about_model_preparation.md  02_about_inference_api.KR.md  02_about_inference_api.md
runtime/bert/: README.KR.md  README.md  benchmark_mxq.py  benchmark_original.py  inference_mxq.py  (+1 more)
runtime/cpp/image_classification/: CMakeLists.txt  README.KR.md  README.md  infer_cls.cc
runtime/cpp/object_detection/: CMakeLists.txt  README.KR.md  README.md  infer_det.cc  yolo_detect_config.h  yolov9m_config.h
runtime/cpp/object_detection/utils/inference/: parser.cc  parser.h  runner.cc  runner.h  transform.cc  transform.h  types.h
runtime/cpp/object_detection/utils/postprocess/: decode.cc  decode.h
runtime/cross_compile/image_classification/: CMakeLists.txt  README.KR.md  README.md
runtime/cross_compile/object_detection/: CMakeLists.txt  README.KR.md  README.md  infer_det.cc
runtime/cross_compile/object_detection/utils/postprocess/: decode.cc  decode.h
(+217 files in other folders)
